fixed padding wrong on mobile

--- a/less/style/blocks/modal2.less
+++ b/less/style/blocks/modal2.less
@@ -133,10 +133,6 @@
     height: 100%;
   }
 
-  .modal2__backdrop {
-    padding: 40px 0 68px;
-  }
-
   .modal2__content {
     height: 100%;
     margin-top: 0;
@@ -144,4 +140,10 @@
 
     background: transparent;
   }
+
+  .respond(medium, {
+    .modal2__backdrop {
+      padding: 40px 0 68px;
+    }
+  })
 }
